add two reference cites

--- a/lyapunov-stability-theory/sources/master.ltx
+++ b/lyapunov-stability-theory/sources/master.ltx
@@ -43,6 +43,7 @@
 
   %\begin{thebibliography}{99}
   %  \bibtem{bib:d} \url{http://www.gifu-nct.ac.jp/elcon/labo/endo-n/endo/lecture/syscon/node24.html}
+  %  \bibtem{bib:d} \url{https://en.wikipedia.org/wiki/Lyapunov_stability}
   %\end{thebibliography}
 
 \end{document}
