--- a/riemann-integral/sources/master.ltx
+++ b/riemann-integral/sources/master.ltx
@@ -46,6 +46,10 @@
     と定める。
   \end{definition}
 
+  \begin{thebibliography}{99}
+    %TODO:\bibtem{bib:d} \url{https://www.ms.u-tokyo.ac.jp/~aida/lecture/20/10-7.pdf}
+    %TODO:\bibtem{bib:d} \url{https://en.wikipedia.org/wiki/Darboux_integral}
+  \end{thebibliography}
 
 
 \end{document}
