--- a/neural-network/sources/master.ltx
+++ b/neural-network/sources/master.ltx
@@ -31,5 +31,13 @@
 
   \subimport{./sources/sections/}{genetic-algorithm.ltx}
 
+  \subimport{./sources/sections/}{memetic-algorithm.ltx}
+
+  \subimport{./sources/sections/}{ant-colony-optimization.ltx}
+
+  \subimport{./sources/sections/}{particle-swarm-optimization.ltx}
+
+  %\subimport{./sources/sections/}{.ltx}
+
 \end{document}
 
