--- a/neural-network/sources/sections/genetic-algorithm.ltx
+++ b/neural-network/sources/sections/genetic-algorithm.ltx
@@ -53,7 +53,7 @@
       となる。
       本節では個体と遺伝子型を等しいものとして扱う。
 
-      複数の個体からなる個体群(population)$P$に対して、以下の繰り返し計算を行うことで解を探索する。
+      複数の個体(individual)からなる個体群(population)$P$に対して、以下の繰り返し計算を行うことで解を探索する。
       なお、遺伝的アルゴリズムでは1回の繰り返しを1世代(generation)と呼ぶ。
       \begin{description}
         \descitem{Step1}{itm:GA:step1}
@@ -216,23 +216,39 @@
 
             \descitem{部分一致交叉(partially matched crossover)}{}
               部分一致交叉は順序表現に対して用いられる交叉である。
+              具体的には以下の手順で行われる。
+              \begin{description}
+                \descitem{Step1}{}
+                  親において、ランダムに2つの遺伝子座$m_1, m_2 (m_1 < m_2)$を選び、それらの遺伝子座の後ろに切れ目を入れる。
+                \descitem{Step2}{GA:partially-mathced-crossover:step2}
+                  親1の2つの切れ目の外側の部分遺伝子列を子1にコピーし、親2の2つの切れ目の間の部分遺伝子列を子1にコピーする。
+                  また、$n = m_1 + 1$とする。
+                \descitem{Step3}{GA:partially-mathced-crossover:step3}
+                  子1の左から$n$番目にある対立遺伝子が子1の中に1つしかない場合は、$n$番目の遺伝子を親1の$n$番目の遺伝子に置き換える。
+                  対立遺伝子が2つある場合は子1の中の$n$番目でない同じ対立遺伝子の遺伝子座を探し、その位置の遺伝子を親1の$n$番目の遺伝子で置き換える。
+                \descitem{Step4}{GA:partially-mathced-crossover:step4}
+                  もし$n < m_2$ならば$n = n + 1$として\ref{GA:partially-mathced-crossover:step3}へ戻る。
+                \descitem{Step5}{}
+                  親1を親2、親2を親1、子1を子2に読み替えて\ref{GA:partially-mathced-crossover:step2}から\ref{GA:partially-mathced-crossover:step4}までの手順を繰り返し実行して子2を得る。
+              \end{description}
+              例として遺伝子を3分割する方法を示したが、一様交叉や$n$点交叉のようにして分割して行うこともある。
 
             \descitem{順序交叉(order crossover)}{}
-              hoge
-
-            \descitem{hoge}{}
-              hoge
-
-            \begin{description}
-              \descitem{hoge}{}
-                hoge
-            \end{description}
-            \descitem{hoge}{}
-              hoge
+              順序交叉は部分一致交叉と同様に順序表現に対して用いられる交叉である。
+              遺伝子の長さが$L$である個体群に対しては具体的には以下の手順で行われる。
               \begin{description}
-                \descitem{hoge}{}
-                  hoge
+                \descitem{Step1}{}
+                  個体の遺伝子座を2つランダムに選び、$m_1, m_2(m_1 < m_2)$とする
+                \descitem{Step2}{}
+                  親1の遺伝子$I_1$を遺伝子座$1$から$m_1$までの遺伝子を$I_1^l$、$m_1+1$から$m_2$までの遺伝子を$I_1^c$、$m_2+1$から$L$までの遺伝子を$I_1^r$とし、同様に親2の遺伝子$I_2$を$I_2^l, I_2^c, I_2^r$とわける。
+                \descitem{Step3}{}
+                  $I_1^c$内での対立遺伝子同士の順序関係が親2の遺伝子$I_2$内での順序関係と一致するように$I_1^c$内の遺伝子を並び変えて${I_1^c}'$とする。
+                \descitem{Step4}{}
+                  同様に$I_2^c$内での対立遺伝子同士の順序関係が親1の遺伝子$I_1$内での順序関係と一致するように$I_2^c$内の遺伝子を並び変えて${I_2^c}'$とする。
+                \descitem{Step5}{}
+                  $I_1^l$と${I_1^c}'$と$I_1^r$を並べることで子1の遺伝子とし、$I_2^l$と${I_2^c}'$と$I_2^r$を並べることで子2の遺伝子とする。
               \end{description}
+              部分一致交叉と同様に、一様交叉や$n$点交叉のようにして分割して行うこともある。
           \end{description}
 
         \subsubsection{突然変異則}
@@ -300,6 +316,8 @@
               またこの方法だとトーナメントに参加できない個体が発生する可能性があるため、個体群$S$の個体を$T$個ならべて$\card{S}T$個の個体の集りを作り、これを並び変えて$T$個の集りを再度作ることでサイズ$T$のトーナメントを$\card{S}$個作る方法も用いられる。
               この方法であれば全ての個体が必ずトーナメントに参加することができるため適応度が高い個体は必ず選択される。
           \end{description}
+
+          適応度比例選択では適応度から計算される確率に従って個体が選択されるのに対して、トーナメント選択では適応度の大小とトーナメントのサイズに従って個体が選択される。
 
         \subsubsection{その他の設計}
           遺伝的アルゴリズムを行う際に決めなければならないのは交叉則や突然変異則、選択則だけではない。
