--- a/simulated-annealing/sources/master.ltx
+++ b/simulated-annealing/sources/master.ltx
@@ -6,8 +6,8 @@
 \usepackage{./preambles/ownpack}
 
 
-\title{title}
-\author{muushi97}
+\title{シミュレーテッド・アニーリング(Simulated Annealing)}
+\author{}
 \date{}
 
 % -----------------------------------------------------------------------
@@ -18,6 +18,63 @@
 
   \maketitle
   \tableofcontents
+
+  \section{概要(abstract)}
+    シミュレーテッド・アニーリング(Simulated Annealing)はメタヒューリスティクスの一つである。
+    このアルゴリズムは Kirkpatrick ら、および Cerny によってそれぞれ独立に紹介されたものである。
+    組合せ最適化問題に対して用いることで確率的に近似解を得ることができる。
+
+    シミュレーテッド・アニーリングの原理は物理現象の焼きなまし(Annealing)を組合わせ最適化問題の解の探索へと導入したものである。
+    焼きなましとは温度の高い状態から低い状態へと序々に遷移させることで、物体の粒子の並びが整った状態へと変化しやすくなることを利用する方法であり、粒子の並びが整った状態であればエネルギーは小さくなる。
+    このエネルギーを最適化問題のコストとして見立てることでシミュレーテッド・アニーリングは構成される。
+
+  \section{組合せ最適化問題(combinatorial optimazation problem)}
+    組合せ最適化問題とは最適化問題の分類の一つであり、実行可能領域が組合せ的である問題をいう。
+    組合せ的であるとは、離散量や有限(もしくは加算無限)集合のもつ数学的性質を反映していることであり、離散的最適化(discrete optimization)や離散的計画法(discrete programming)とも言われる。
+    具体的には整数計画問題、グラフやネットワークに関する最適化問題、有限個の要素を対象とするスケジューリング問題等がある。
+    また、組合せ最適化問題には応用事例も多数存在し、整数計画法、ネットワーク計画法、マトロイド理論、分枝限定法、動的計画法、線形計画法等多数の成果が応用に用いられている。
+    組合せ最適化問題は一般に
+    \begin{align}
+      \text{min}  &\; f(x) \\
+      \text{s.t.} &\; x \in X
+    \end{align}
+    と書かれる。
+    ここで関数$f$は目的関数と呼ばる。
+    また前述したように集合$X$は離散的な性質を持ち、この集合を実行可能領域と呼ぶ。
+    組合せ最適化問題といわれる多くの問題はNP困難なクラスに属しているため、通常は近似的に良い解を得ることで最適解の代替とする。
+    この代替とされる近似的な解を近似解(approximate solution)といい、近似解に対して最適解を大域的最適解(globally optimal solution)という。
+    また、近傍において最適である解を局所最適解(locally optimal solution)という。
+    近似解を得る近似解法においては、得られる解の質(近似解と最適解との距離)や計算速度が主要な課題であり、より解の質が良くより計算時間が短い手法が求めれらる。
+
+  \section{シミュレーテッド・アニーリング(Simulated Annealing)}
+    前述した通りシミュレーテッド・アニーリングは、温度を序々に下げることで物体のエネルギー状態を最小化することができるという原理をモデルとしたものである。
+    %この物理過程をシミューレションするアルゴリズムに Metropolis Algorithm がある。
+    物体の状態を解、エネルギーを目的関数と対応づけることで、この物理過程を組合せ最適化問題へと適応させることで開発されたのがシミュレーテッドアニーリングである。
+    おおまかには以下の手順で実行される。
+    \begin{description}
+      \descitem{Step1}{itm:SA:algorithm:step1}
+        探索の開始点となる初期値$x$を定める。
+        また温度$T$を適当に定める。
+
+      \descitem{Step2}{itm:SA:algorithm:step2}
+        現状の解$x$から近傍の解$x'$を生成する。
+        それぞれの解のコスト$f(x), f(x')$に対して確率
+        \begin{equation}
+          Pr\{\text{accept} \; x'\} = \begin{cases}
+            1, & f(x') \le f(x) \\
+            \exp{-\frac{f(x') - f(x)}{T}}, & \text{otherwise}
+          \end{cases}
+        \end{equation}
+        で$x$を$x'$によって置きかえる。
+
+      \descitem{Step3}{itm:SA:algorithm:step3}
+        終了条件を満たすならば終了とし、そうでないならば$T$を事前に定めた手順で変更し\ref{itm:SA:algorithm:step2}へ戻る。
+    \end{description}
+
+    このシミュレーテッド・アニーリングにおいて重要なのは受理確率$Pr\{\text{accept} \; x'\}$でありこの確率は温度が高ければ高いほど一定の値へと近づく。
+    よって温度が低けれは改悪されるような解へと変化はしないが、温度が高い状態であれば改悪されるような解へと変化する確率も高くなる。
+    この仕組みによって局所解へと陥いることを防ぎ、最適解へと到達する確率を高くしている。
+    %TODO: メタヒューリスティクス p.133
 
 
 
