--- a/simulated-annealing/sources/master.ltx
+++ b/simulated-annealing/sources/master.ltx
@@ -62,7 +62,7 @@
         \begin{equation}
           Pr\{\text{accept} \; x'\} = \begin{cases}
             1, & f(x') \le f(x) \\
-            \exp{-\frac{f(x') - f(x)}{T}}, & \text{otherwise}
+            \exp{\left( -\frac{f(x') - f(x)}{T} \right)}, & \text{otherwise}
           \end{cases}
         \end{equation}
         で$x$を$x'$によって置きかえる。
@@ -74,9 +74,95 @@
     このシミュレーテッド・アニーリングにおいて重要なのは受理確率$Pr\{\text{accept} \; x'\}$でありこの確率は温度が高ければ高いほど一定の値へと近づく。
     よって温度が低けれは改悪されるような解へと変化はしないが、温度が高い状態であれば改悪されるような解へと変化する確率も高くなる。
     この仕組みによって局所解へと陥いることを防ぎ、最適解へと到達する確率を高くしている。
-    %TODO: メタヒューリスティクス p.133
 
+    シミュレーテッド・アニーリングを実際に適用するうえで、いくつか決めなければいけないものがある。
+    まず、通常の局所探索の方法と解の表現である。
+    さらに温度パラメータの初期値と減少させるスケジュール、各温度における反復数も決める必要がある。
+    この温度パラメータや反復数の設定を決めることを冷却スケジュールといい、冷却スケジュールによって解の質や計算時間が変化する。
 
+    また実際の計算において、温度$T$での全反復数と受理された移動の回数の比率によって受理率(acceptance ratio)$\eta(T)$が
+    \begin{equation}
+      \eta(T) = \frac{\text{提案された解へ移動した回数}}{\text{温度$T$において移動を提案する回数}}
+    \end{equation}
+    として計算される。
+    温度$T$から計算される受理確率$Pr\{\text{accept} \; x'\}$から、温度が高ければ受理率も高く温度が低ければ受理率も低くなることが期待される。
+    シミュレーテッド・アニーリングにおいて温度$T$を常に$0$とすることで、通常の局所探索と同等のアルゴリズムとなる。
+
+  \section{漸近的収束性}
+    シミュレーテッド・アニーリングの解の系列を確率過程としてのマルコフ連鎖としてとらえ、最適解への確率的収束性を示すことが実際に行われた。
+    温度を一定として反復を繰り返す過程は、推移確率が変化しない斉次(homogeneous)なマルコフ連鎖とみることができる。
+    このモデル化のもとで、ある仮定を与えることで、反復を繰り返すと平衡状態へと達することが示される。
+    その平衡状態において各状態(解)$i \in X$の確率$\omega_i(T)$は
+    \begin{equation}
+      \omega_i(T) = \frac{\exp{\left( -\frac{f(i)}{T} \right)}}{\sum_{j \in X} \exp{\left( -\frac{f(j)}{T} \right)}}
+    \end{equation}
+    として表わされる。
+    この確率分布はボルツマン分布といわれる。
+
+    また、上述のボルツマン分布において$T$を序々に$0$へと近づけることで各状態の確率はある一定の値に収束する。
+    最適解の集合を$X_{opt}$としたとき、最適解$i_{opt} \in X_{opt}$に対しては
+    \begin{align}
+      \lim_{T \to 0} \omega_{i_{opt}}(T) &= \lim_{T \to 0} \frac{\exp{\left( -\frac{f(i_{opt})}{T} \right)}}{\sum_{j \in X} \exp{\left( -\frac{f(j)}{T} \right)}} \\
+                                         &= \lim_{T \to 0} \frac{\exp{\left( \frac{f_{opt} - f(i_{opt})}{T} \right)}}{\sum_{j \in X} \exp{\left( \frac{f_{opt} - f(j)}{T} \right)}} \\
+                                         &= \frac{1}{\card{X_{opt}}}
+    \end{align}
+    となり、また最適解でない解$i \in X - X_{opt}$に対しては
+    \begin{align}
+      \lim_{T \to 0} \omega_{i_{opt}}(T) &= \lim_{T \to 0} \frac{\exp{\left( -\frac{f(i_{opt})}{T} \right)}}{\sum_{j \in X} \exp{\left( -\frac{f(j)}{T} \right)}} \\
+                                         &= \lim_{T \to 0} \frac{\exp{\left( \frac{f_{opt} - f(i_{opt})}{T} \right)}}{\sum_{j \in X} \exp{\left( \frac{f_{opt} - f(j)}{T} \right)}} \\
+                                         &= 0
+    \end{align}
+    となる。
+    したがって、各温度において平衡状態になるまで反復し、そのうえで温度$T$を$0$へと近づけることで、対象としている問題の最適解の一つへと確率的に収束する。
+    このモデル化における仮定が満たされれば最適解への漸近的収束性が保証される。
+
+    この仮定において斉次なモデルに対して温度$T$を序々に下げている。
+    しかし、平衡状態の確率分布を導出した仮定は最適解への収束するための十分条件ではない。
+    そこで、ある温度での反復回数に制限を与えたうえで序々に温度を下げていくモデル、つまり非斉次なマルコフ連鎖のモデルが示されている。
+    特に Hajec に必要十分性が保証されており、厳密な証明も示されている。
+    その証明では、ある仮定のもとで、ある定数$\Gamma$に対して温度パラメータの系列$T_k \; (k = 0, 1, \cdots)$が
+    \begin{equation}
+      T_k = \frac{\Gamma}{\log (k + 2)}
+    \end{equation}
+    である、もしくは上式よりもゆっくり冷却されるならば、シミュレーテッド・アニーリングが収束することが示されている。
+    この冷却スケジュールに従って冷却した場合、TSP において求まる解の最終分布が2乗平均の意味において最適解に到達するには
+    \begin{equation}
+      k = O(n^{n^{2n-1}})
+    \end{equation}
+    の計算時間が必要とされる。
+    TSP の解空間の大きさは$(N-1)!$であるため、総当たりによる探索の方がシミュレーテッド・アニーリングよりも早く最適解が得られることとなる。
+    そのためシミュレーテッド・アニーリングは厳密な最適解を得る手法としては妥当でなく、近似的な解を早く得るという点において利用価値が発生することとなる。
+    したがって、いかに実用的な時間で、各温度において平衡に近い状態(疑似平衡状態)を得る冷却スケジュールを構成できるかが課題となる。
+
+  \section{冷却スケジュール}
+    前節で示したように、シミュレーテッド・アニーリングを無限に近い回数適用することで、最適解を得ることができる。
+    しかし実際には無限解の適用は不可能であり、実用時間内で実行が終了し、かつ最適解に近い解が得られるようにパラメータを調整し利用することとなる。
+    つまり、冷却スケジュールをいかに設定するかという問題となる。
+    冷却スケジュールは以下の4つのパラメータからなる。
+    \begin{itemize}
+      \item 温度の初期値
+      \item 温度の減少関数
+      \item 各温度での反復回数
+      \item 終了条件
+    \end{itemize}
+
+    冷却スケジュールの設計において、シミュレーテッド・アニーリングの最適解への収束性に関する理論は基本的に参考にならない。
+    しかし、収束性を最大限生かすために、冷却スケジュールを疑似平衡の概念に沿って構成することが望ましい。
+    温度$T_k$のときに疑似平衡であるとは、温度$T_k$において$R$回の繰り返しを行った結果の確率分布$Q(R, T_k)$と理論的に温度$T_k$によって得られる平衡状態$\Omega(T_k)$に対して、ある$0 < \epsilon$によって
+    \begin{equation}
+      \norm{Q(R, T_k) - \Omega(T_k)} < \epsilon
+    \end{equation}
+    となることをいう。
+    %TODO: メタヒューリスティクス p.137
+
+  \section{冷却スケジュールに対する理論的検討}
+    %TODO: メタヒューリスティクス p.138
+
+  \section{具体的適用の例}
+    %TODO: メタヒューリスティクス p.139
+
+  \section{おわりに}
+    %TODO: メタヒューリスティクス p.143
 
 \end{document}
 
