fix section title

--- a/simulated-annealing/sources/master.ltx
+++ b/simulated-annealing/sources/master.ltx
@@ -88,7 +88,7 @@
     温度$T$から計算される受理確率$Pr\{\text{accept} \; x'\}$から、温度が高ければ受理率も高く温度が低ければ受理率も低くなることが期待される。
     シミュレーテッド・アニーリングにおいて温度$T$を常に$0$とすることで、通常の局所探索と同等のアルゴリズムとなる。
 
-  \section{漸近的収束性}
+  \section{漸近的収束性(asymptotic convergence)}
     シミュレーテッド・アニーリングの解の系列を確率過程としてのマルコフ連鎖としてとらえ、最適解への確率的収束性を示すことが実際に行われた。
     温度を一定として反復を繰り返す過程は、推移確率が変化しない斉次(homogeneous)なマルコフ連鎖とみることができる。
     このモデル化のもとで、ある仮定を与えることで、反復を繰り返すと平衡状態へと達することが示される。
@@ -134,7 +134,7 @@
     そのためシミュレーテッド・アニーリングは厳密な最適解を得る手法としては妥当でなく、近似的な解を早く得るという点において利用価値が発生することとなる。
     したがって、いかに実用的な時間で、各温度において平衡に近い状態(疑似平衡状態)を得る冷却スケジュールを構成できるかが課題となる。
 
-  \section{冷却スケジュール}
+  \section{冷却スケジュール(cooling schedule)}
     前節で示したように、シミュレーテッド・アニーリングを無限に近い回数適用することで、最適解を得ることができる。
     しかし実際には無限解の適用は不可能であり、実用時間内で実行が終了し、かつ最適解に近い解が得られるようにパラメータを調整し利用することとなる。
     つまり、冷却スケジュールをいかに設定するかという問題となる。
@@ -155,13 +155,13 @@
     となることをいう。
     %TODO: メタヒューリスティクス p.137
 
-  \section{冷却スケジュールに対する理論的検討}
+  \section{冷却スケジュールに対する理論的検討(theoretical study on cooling schedule)}
     %TODO: メタヒューリスティクス p.138
 
-  \section{具体的適用の例}
+  \section{具体的適用の例(example)}
     %TODO: メタヒューリスティクス p.139
 
-  \section{おわりに}
+  \section{おわりに(conclusion)}
     %TODO: メタヒューリスティクス p.143
 
 \end{document}
