--- a/tabu-search/sources/master.ltx
+++ b/tabu-search/sources/master.ltx
@@ -6,8 +6,8 @@
 \usepackage{./preambles/ownpack}
 
 
-\title{title}
-\author{muushi97}
+\title{タブーサーチ(tabu search)}
+\author{}
 \date{}
 
 % -----------------------------------------------------------------------
