write title and first typeset

--- a/jordan-normal-form/sources/master.ltx
+++ b/jordan-normal-form/sources/master.ltx
@@ -6,8 +6,8 @@
 \usepackage{./preambles/ownpack}
 
 
-\title{title}
-\author{muushi97}
+\title{ジョルダン標準形(Jordan normal form)}
+\author{}
 \date{}
 
 % -----------------------------------------------------------------------
