fix all periods in bibliograpy

--- a/jordan-normal-form/sources/master.ltx
+++ b/jordan-normal-form/sources/master.ltx
@@ -198,16 +198,16 @@
 
 
   \begin{thebibliography}{99}
-    \bibitem{bib:a} ``講義固有ベクトル - Wikipedia''，\url{https://ja.wikipedia.org/wiki/広義固有ベクトル}，参照May.16,2020.
-    \bibitem{bib:b} ``Generalized eigenvector - Wikipedia''，\url{https://en.wikipedia.org/wiki/Generalized_eigenvector#Jordan_chains}，参照May.16,2020.
-    \bibitem{bib:c} ``行列式 - Wikipedia''，\url{https://ja.wikipedia.org/wiki/行列式}，参照May.17,2020.
-    \bibitem{bib:d} ``固有多項式 - Wikipedia''，\url{https://ja.wikipedia.org/wiki/固有多項式}，参照May.17,2020.
-    \bibitem{bib:e} ``Jordan normal form - Wikipedia''，\url{https://en.wikipedia.org/wiki/Jordan_normal_form}，参照May.17,2020.
-    \bibitem{bib:f} ``線形代数Ｉ/広義固有空間の構造とジョルダン標準形 - 武内＠筑波大''，\url{https://dora.bk.tsukuba.ac.jp/~takeuchi/?線形代数Ｉ\%2F広義固有空間の構造とジョルダン標準形}，参照May.17,2020.
-    \bibitem{bib:g} ``Invariant subspace - Wikipedia''，\url{https://en.wikipedia.org/wiki/Invariant_subspace}，参照May.17,2020.
-    \bibitem{bib:h} ``Restriction(mathematics) - Wikipedia''，\url{https://en.wikipedia.org/wiki/Restriction_(mathematics)}，参照May.17,2020.
-    \bibitem{bib:i} ``Rank-nullity theorem - Wikipedia''，\url{https://en.wikipedia.org/wiki/Rank–nullity_theorem}，参照May.17,2020.
-    \bibitem{bib:j} ``ジョルダン標準形 - Wikipedia''，\url{https://ja.wikipedia.org/wiki/ジョルダン標準形}，参照May.17,2020.
+    \bibitem{bib:a} ``講義固有ベクトル - Wikipedia''，\url{https://ja.wikipedia.org/wiki/広義固有ベクトル}，参照May.16,2020．
+    \bibitem{bib:b} ``Generalized eigenvector - Wikipedia''，\url{https://en.wikipedia.org/wiki/Generalized_eigenvector#Jordan_chains}，参照May.16,2020．
+    \bibitem{bib:c} ``行列式 - Wikipedia''，\url{https://ja.wikipedia.org/wiki/行列式}，参照May.17,2020．
+    \bibitem{bib:d} ``固有多項式 - Wikipedia''，\url{https://ja.wikipedia.org/wiki/固有多項式}，参照May.17,2020．
+    \bibitem{bib:e} ``Jordan normal form - Wikipedia''，\url{https://en.wikipedia.org/wiki/Jordan_normal_form}，参照May.17,2020．
+    \bibitem{bib:f} ``線形代数Ｉ/広義固有空間の構造とジョルダン標準形 - 武内＠筑波大''，\url{https://dora.bk.tsukuba.ac.jp/~takeuchi/?線形代数Ｉ\%2F広義固有空間の構造とジョルダン標準形}，参照May.17,2020．
+    \bibitem{bib:g} ``Invariant subspace - Wikipedia''，\url{https://en.wikipedia.org/wiki/Invariant_subspace}，参照May.17,2020．
+    \bibitem{bib:h} ``Restriction(mathematics) - Wikipedia''，\url{https://en.wikipedia.org/wiki/Restriction_(mathematics)}，参照May.17,2020．
+    \bibitem{bib:i} ``Rank-nullity theorem - Wikipedia''，\url{https://en.wikipedia.org/wiki/Rank–nullity_theorem}，参照May.17,2020．
+    \bibitem{bib:j} ``ジョルダン標準形 - Wikipedia''，\url{https://ja.wikipedia.org/wiki/ジョルダン標準形}，参照May.17,2020．
     %\bibitem{bib:z} ``''，\url{}，参照May.17,2020.
   \end{thebibliography}
 \end{document}
